--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
                     </div>
 
                     <div class="col-auto">
-                        <input type="text" class="form-control" id="inputText" placeholder="영화 제목을 검색해 보세요">
+                        <input type="text" class="form-control" id="inputText" placeholder="영화 제목을 검색해 보세요" autofocus>
                     </div>
 
                     <div class="col-auto">
